--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.13",
     "mongoose": "^5.7.5",
     "morgan": "^1.9.1",
+    "swagger-ui-express": "^4.1.4",
     "validator": "^10.9.0"
   },
   "devDependencies": {
