--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test-controllers": "yarn test -t controllers",
     "test-auth": "yarn test -t Authentication:",
     "dev": "nodemon --exec yarn restart",
+    "prod": "nodemon --exec yarn restart",
     "restart": "rimraf dist && yarn build && yarn start",
     "start": "node dist/index.js"
   },
@@ -26,6 +27,8 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.3.13",
     "morgan": "^1.9.1",
+    "rand-token": "^1.0.1",
+    "swagger-ui-express": "^4.1.4",
     "validator": "^10.9.0"
   },
   "devDependencies": {
